--- a/templates/login.html
+++ b/templates/login.html
@@ -16,11 +16,21 @@
             <b-navbar>
                 <template #brand>
                     <b-navbar-item href="/">
-                        <img class="navbar-logo" src="static/assets/images/logo.png" alt="MusiMaker">
+                        <img class="navbar-logo" src="static/assets/images/musimaker-logo.png" alt="MusiMaker">
                     </b-navbar-item>
                     <b-navbar-item href="/global_uploads">
                         <a class="navbar-text" alt="Global Uploads">
                             Global Uploads
+                            </a>
+                    </b-navbar-item>
+                    <b-navbar-item href="/midi_upload">
+                        <a class="navbar-text" alt="Midi Upload">
+                            Midi Upload
+                            </a>
+                    </b-navbar-item>
+                    <b-navbar-item href="/spotify_search">
+                        <a class="navbar-text" alt="Spotify Search">
+                            Spotify Search
                             </a>
                     </b-navbar-item>
                 </template>
