--- a/templates/midi_results.html
+++ b/templates/midi_results.html
@@ -8,8 +8,17 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css">
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
-    <script src="/static/js/album_cover.js"></script>
-    <script>const spotify_albums = {{ albums | tojson }};</script>
+    <script src="https://cdn.jsdelivr.net/combine/npm/tone@14.7.58,npm/@magenta/music@1.23.1/es6/core.js,npm/focus-visible@5,npm/html-midi-player@1.4.0"></script>
+    <script>
+        const file = 'static/queries/generated_MIDI/' + {{ recent_file | tojson }};
+    </script>
+
+    <script>
+        window.onload = function (){
+            document.getElementById('midi').href = file
+        document.getElementById('midi-player').src = file
+        }
+    </script>
 </head>
 
 <body>
@@ -49,7 +58,7 @@
                     </b-navbar-item>
                     <b-navbar-item>
                         <a class='navbar-text-logout' href='/sign_out'>
-                             LOGOUT
+                            Logout
                         </a>
                     </b-navbar-item>
                     {% else %}
@@ -66,35 +75,21 @@
                     </b-navbar-item>
                 </template>
             </b-navbar>
+            <div class="container">
+            <img src="static/assets/images/generationresults-image.png">
+            </div>
         </template>
-
-        <div class="container">
-            <div class="columns">
-                <div class="column">
-                    <div class="content tagline header">
-                        <img src="static/assets/images/spotifysearch-image.png">
-                        <!-- <h1 class="white-font"> Spotify Album Search
-                        </h1> -->
-                    </div>
-                </div>
-            </div>
+        <div class = 'midi-result'>
+            <midi-player
+                class = 'midi-player'
+                id = 'midi-player'
+                sound-font visualizer="#myVisualizer">
+            </midi-player>
+            <midi-visualizer type="piano-roll" id="myVisualizer"></midi-visualizer>
+            <a id="midi" download="Midi">
+                <button class="upload-button" type="button">Download</button>
+            </a>
         </div>
-        
-        
-        <div class="container" id="spotify-table">
-            <form  action="{{ url_for('spotify_album') }}">
-                <input name='spsearch' id='spsearch' type="text" v-model="search" placeholder="Search Song" /> 
-                <input type='submit'/>
-            </form>
-            <br> <br>
-            <div id="table_wrapper" >
-                <template>
-                    <b-table :striped="true" :data="albums" :columns="columns" @click="songClicked($event)"></b-table>
-                </template>
-            </div>
-        </div>
-        
-
     </div>
 </body>
 
@@ -103,51 +98,9 @@
 <script type="application/javascript" src="https://unpkg.com/buefy/dist/buefy.min.js"></script>
 <script type="application/javascript" src="https://unpkg.com/buefy/dist/components/table"></script>
 <script type="application/javascript" src="https://unpkg.com/buefy/dist/components/input"></script>
+<script src="/static/js/midi.js"></script>
 <script>
-    var vue_init = new Vue({
-        el: "#app",
-        delimiters: ["${", "}"],
-        data: {
-            albums: spotify_albums,
-            columns : [
-                {
-                    field: 'images.0.url',
-                    label:'Album Cover',
-                    sortable:false,
-                },
-                {
-                    field: 'name',
-                    label: 'Name',
-                    numeric:false,
-                    sortable:false,
-                },
-                {
-                    field: 'artists.0.name',
-                    label: 'Artist'
-                },
-                {
-                    field: 'total_tracks',
-                    label: "# of Songs"
-                },
-                {
-                    field: 'release_date',
-                    label: 'Release Date',
-                    numeric:false,
-                    sortable:false,
-                }
-            ]
-        },
-        methods: {
-            // songClicked: function(event) {
-            //     window.location.href = '/spotify_song/' + event.id
-            // },
-        }
-    });
+    const user = {{user|tojson}}
 </script>
-<script>
-    window.addEventListener("load", function(event) {
-        generate_img()
-        document.getElementById('table_wrapper').style.display = 'block';
-    });
-  </script>
+
 </html>
