--- a/templates/midi_results.html
+++ b/templates/midi_results.html
@@ -78,7 +78,7 @@
             </midi-player>
             <midi-visualizer type="piano-roll" id="myVisualizer"></midi-visualizer>
             <a href="{{ url_for('static', filename='queries/generated_MIDI/convert.mid') }}" download="GFG">
-                <button type="button">Download</button>
+                <button class = "upload-button" type="button">Download</button>
             </a>
         </div>
 
